--- a/06_Dom/three.html
+++ b/06_Dom/three.html
@@ -22,7 +22,7 @@
     const addText = document.createTextNode("Chai aur code")
     div.appendChild(addText)
 
-    document.body.appendChild(div)
+    document.body.appendChild
 
 </script>
 </html>
